--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <a href="/"></a>
-        <!-- "Это не картинка" -->
+        <!-- "Это не картинка" ссылка не в нав) только первый юл-->
         <img src="./images/WebStudio.svg" alt="WebStudio" />
         <ul>
           <li><a href="">Студия</a></li>
