--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!---->
     <header>
       <nav>
-        <a href="/"></a>
+        <a href="/">WebStudio</a>
         <!-- "Это не картинка" ссылка не в нав) только первый юл-->
-        <img src="./images/WebStudio.svg" alt="WebStudio" />
+        <!-- <img src="./images/WebStudio.svg" alt="WebStudio" /> -->
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -98,8 +98,9 @@
     </main>
     <!---->
     <footer>
-      <a href="/"></a>
-      <img src="./images/WebStudio.svg" alt="WebStudio" />
+      <a href="/">WebStudio</a>
+      <!-- "Это не картинка" ссылка не в нав) только первый юл-->
+      <!-- <img src="./images/WebStudio.svg" alt="WebStudio" /> -->
       <address>
         г. Киев, пр-т Леси Украинки, 26
         <a href="mailto:info@example.com">info@example.com</a>
