--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!---->
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <!-- "Это не картинка" ссылка не в нав) только первый юл-->
         <!-- <img src="./images/WebStudio.svg" alt="WebStudio" /> -->
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -98,13 +98,24 @@
     </main>
     <!---->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <!-- "Это не картинка" ссылка не в нав) только первый юл-->
       <!-- <img src="./images/WebStudio.svg" alt="WebStudio" /> -->
       <address>
-        г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://goo.gl/maps/SqduPQ5yzWcNrS9j9"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
