--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
-        <!-- "Это не картинка" ссылка не в нав) только первый юл-->
-        <!-- <img src="./images/WebStudio.svg" alt="WebStudio" /> -->
         <ul>
           <li><a href="./index.html">Студия</a></li>
           <li><a href="#">Портфолио</a></li>
@@ -63,33 +61,33 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./images/box1.jpg" alt="проєктирование" width="370" height="295" /></li>
+          <li><img src="./images/box1.jpg" alt="проєктирование" width="370" /></li>
           <li>
-            <img src="./images/box2.jpg" alt="мобильные приложения" width="370" height="295" />
+            <img src="./images/box2.jpg" alt="мобильные приложения" width="370" />
           </li>
-          <li><img src="./images/box3.jpg" alt="дизайн" width="370" height="295" /></li>
+          <li><img src="./images/box3.jpg" alt="дизайн" width="370" /></li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Product Designer" width="270" height="260" />
+            <img src="./images/img1.jpg" alt="Product Designer" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Frontend Developer" width="270" height="260" />
+            <img src="./images/img2.jpg" alt="Frontend Developer" width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Marketing" width="270" height="260" />
+            <img src="./images/img3.jpg" alt="Marketing" width="270" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="UI Designer" width="270" height="260" />
+            <img src="./images/img4.jpg" alt="UI Designer" width="270" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -99,8 +97,6 @@
     <!---->
     <footer>
       <a href="./index.html">WebStudio</a>
-      <!-- "Это не картинка" ссылка не в нав) только первый юл-->
-      <!-- <img src="./images/WebStudio.svg" alt="WebStudio" /> -->
       <address>
         <ul>
           <li>
